--- a/front/index.html
+++ b/front/index.html
@@ -7,15 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
 </head>
-<body>
+<body onload="">
     <h1 id="titulo">test</h1>
     <ul id="ulLista"></ul>
-    <input type="text" name="" id="nuevoNombre"><input type="button" value="" id="enviarNombre">
+    <input type="text" name="" id="nuevoNombre"><input type="button" value="cambio" id="enviarNombre" placeholder="cambio">
+    <br>
+
+
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
       </script>
     <script src="/socket.io/socket.io.js"></script>
     <script  type="text/javascript" src="testjs.js"></script>
+
 </body>
 
 </html>
