--- a/front/index.html
+++ b/front/index.html
@@ -9,9 +9,10 @@
 </head>
 <body onload="">
     <h1 id="titulo">test</h1>
-    <ul id="ulLista"></ul>
+    <!--<ul id="ulLista"></ul>
     <input type="text" name="" id="nuevoNombre"><input type="button" value="cambio" id="enviarNombre" placeholder="cambio">
-    <br>
+    <br>-->
+    <div id="root"></div>
 
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
