--- a/front/index.html
+++ b/front/index.html
@@ -18,7 +18,7 @@
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
       </script>
     <script src="/socket.io/socket.io.js"></script>
-    <script  type="text/javascript" src="testjs.js"></script>
+    <!--<script  type="text/javascript" src="testjs.js"></script>-->
 
 </body>
 
