draft 6/1/22 23.39 -me toma react el server

--- a/newFront/index.html
+++ b/newFront/index.html
@@ -19,7 +19,7 @@
       </script>
     <script src="/socket.io/socket.io.js"></script>
     <!--<script  type="text/javascript" src="testjs.js"></script>-->
-    <script src="../dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
