--- a/newFront/index.html
+++ b/newFront/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Hitler Alpha v0.2</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body onload="">
     <div id="root"></div>
